# mini-redis

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
examples/: hello.rs  ping.rs  pub.rs  sub.rs
src/: config.rs  consts.rs  error.rs  lib.rs  logger.rs
src/client/: cli.rs  cmd.rs  mod.rs  subscriber.rs
src/cmd/: get.rs  mod.rs  ping.rs  publish.rs  set.rs  subscribe.rs  unknown.rs  unsubscribe.rs
src/connection/: connect.rs  frame.rs  mod.rs  parse.rs
src/server/: handler.rs  listener.rs  mod.rs  shutdown.rs
src/storage/: db.rs  mod.rs  store.rs  traits.rs
tests/: client.rs
