[package]
name = "mini-redis"
version = "0.1.0"
edition = "2021"
description = "A mini-redis learn from tokio."
repository = "https://github.com/JasonkayZK/mini-redis"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
